--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Tracker</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    
+    <header></header>
+    <script src="/assets/script.js"></script>
 </body>
 </html>
