added card and table

--- a/index.html
+++ b/index.html
@@ -10,7 +10,34 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Welcome to our website!</h1>
+        <p id="date" class="date"></p>
+    </header>
+    <main>
+        <div class="card">
+            <div class="card-header">
+              Featured
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+        <table class="table">
+            <thead>
+                <th>Project Name</th>
+                <th>Project Type</th>
+                <th>Hourly Wage</th>
+                <th>Due Date</th>
+                <th>Days Left</th>
+                <th>Est. Total Earned</th>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </main>
 
 
 
