changed card text and fixed script link

--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@
 <body>
     <header>
         <h1>Welcome to our website!</h1>
-        <p id="date" class="date"></p>
+        <p id="datetime" class="datetime"></p>
     </header>
     <main>
         <div class="card">
-            <div class="card-header">
-              Featured
-            </div>
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">This is a project tracker!</h5>
+              <p class="card-text">Press the button below and a form will show, enter your project information.</p>
+              <a href="#" class="btn btn-primary">Open Form</a>
             </div>
         </div>
         <table class="table">
@@ -42,7 +39,7 @@
 
 
 
-    <script src="/assets/script.js"></script>
+    <script src="assets/script.js"></script>
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
