--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <div class="card-body">
               <h5 class="card-title">This is a project tracker!</h5>
               <p class="card-text">Press the button below and a form will show, enter your project information.</p>
-              <a href="#" class="btn btn-primary">Open Form</a>
+              <a href="#" class="btn btn-primary" id="openFormBtn" type="button" data-toggle="modal" data-target="#modal-form">Open Form</a>
             </div>
         </div>
-<!--         <div class="modal" tabindex="-1">
+        <div class="modal" id="modal-form" tabindex="-1" aria-labelledby="modalFormLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">Modal title</h5>
+                  <h5 class="modal-title" id="modalFormLabel">Project Tracker Form</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -40,7 +40,7 @@
                 </div>
               </div>
             </div>
-        </div> -->
+        </div>
         <table class="table">
             <thead>
                 <th>Project Name</th>
